--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/platform-server": "13.3.1",
     "@angular/router": "^13.3.1",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
@@ -71,8 +72,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "sass": "1.32.13",
     "protractor": "7.0.0",
+    "sass": "1.32.13",
     "ts-node": "~10.7.0",
     "tslint": "6.1.3",
     "typescript": "~4.4.2"
