--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
               "node_modules/moment/moment.js",
               "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
               "node_modules/bootstrap-notify/bootstrap-notify.js",
-              "node_modules/chartist/dist/chartist.js"
+              "node_modules/chartist/dist/chartist.js",
+              "scripts/chat-bot.js" 
+
             ]
           },
           "configurations": {
